Remove legacy dependencies
Remove the following dependencies and replace with standard Java:
- com.google.re2j:re2j
- commons-io:commons-io
- commons-net:commons-net
- org.apache.httpcomponents.core5:httpcore5
- org.json:json

Issue-ID: POLICY-5552
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>
Change-Id: Ib9b5cc2417cb84085fd49d50d153750c17fc88ce