@@ -30,12 +30,13 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.List;
-import org.apache.commons.io.FileUtils;
-import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -258,14 +259,15 @@ class ChartControllerTest {
     }
 
     private String getInstallationJson(String name, String version) {
-        JSONObject jsonObj = new JSONObject();
+        ObjectMapper mapper = new ObjectMapper();
+        ObjectNode jsonObj = mapper.createObjectNode();
         jsonObj.put("name", name);
         jsonObj.put("version", version);
         return jsonObj.toString();
     }
 
     private String getChartInfoJson() throws IOException {
-        return FileUtils.readFileToString(new File(CHART_INFO_YAML), StandardCharsets.UTF_8);
+        return Files.readString(new File(CHART_INFO_YAML).toPath(), StandardCharsets.UTF_8);
     }
 
 }
