@@ -22,7 +22,6 @@
 
 package org.onap.policy.common.utils.resources;
 
-import com.google.re2j.Pattern;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -35,9 +34,9 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.regex.Pattern;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -89,7 +88,7 @@ public final class ResourceUtils {
             if (resourceStream == null) {
                 return null;
             }
-            return IOUtils.toString(resourceStream, StandardCharsets.UTF_8);
+            return new String(resourceStream.readAllBytes(), StandardCharsets.UTF_8);
         } catch (final IOException e) {
             LOGGER.debug("error reading resource stream {}", resourceName, e);
             return null;
